pacman-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: pacman.local
    http:
      paths:
      - path: /pacman-path
        pathType: Prefix
        backend:
          service:
            name: pacman
            port:
              number: 80
